[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/guardian2.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Sprites/menu background.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_color = Color( 0.0745098, 0.137255, 0.788235, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0313726, 0.027451, 0.027451, 0.490196 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.686275 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0509804, 0.0431373, 0.0431373, 0.392157 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="MainMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 0.259
margin_left = -304.0
margin_top = -96.0
margin_right = 1616.0
margin_bottom = 984.0
rect_scale = Vector2( 0.832042, 0.764225 )
texture = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 360.0
margin_top = 224.0
margin_right = 1325.0
margin_bottom = 550.0
rect_scale = Vector2( 0.321298, 0.413321 )
custom_constants/separation = 50

[node name="Play Button" type="Button" parent="VBoxContainer"]
margin_right = 965.0
margin_bottom = 106.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.117647, 0.552941, 0.596078, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Play"

[node name="HighScore Button" type="Button" parent="VBoxContainer"]
margin_top = 156.0
margin_right = 965.0
margin_bottom = 262.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.117647, 0.552941, 0.596078, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "High score"

[node name="Controls Button" type="Button" parent="VBoxContainer"]
margin_top = 312.0
margin_right = 965.0
margin_bottom = 418.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.117647, 0.552941, 0.596078, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Controls"

[node name="Exit Button" type="Button" parent="VBoxContainer"]
margin_top = 468.0
margin_right = 965.0
margin_bottom = 574.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.117647, 0.552941, 0.596078, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Exit"

[connection signal="pressed" from="VBoxContainer/Play Button" to="." method="_on_Play_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/HighScore Button" to="." method="_on_Leaderboard_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Controls Button" to="." method="_on_Controls_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit Button" to="." method="_on_Exit_Button_pressed"]
